# shifts

./: Makefile  README.md  shifts.cabal
src/: Main.hs  Seeds.hs  Shifts.hs
src/Shifts/: API.hs  Server.hs  Types.hs
test/: ShiftsSpec.hs
